--- a/dogs.html
+++ b/dogs.html
@@ -4,7 +4,8 @@
     <title>
     Pet-Rescue
     </title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 <body>
 <header>
